Closed Bug 352293 Opened 19 years ago Closed 19 years ago

Should show standard mouse cursor instead of text cursor when hovering over RSS icon

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED
Camino1.5

People

(Reporter: nick.kreeger, Assigned: nick.kreeger)

Details

(Keywords: fixed1.8.1)

Attachments

(2 files)

We should be using the standard cursor when one hovers over the RSS icon in the URL bar. For an example of the "standard" cursor, hover over a favicon in the URL bar. Currently we show the text cursor
Taking
Status: NEW → ASSIGNED
I actually get the text cursor when I hover over the favicon (and on the lock, sometimes it's text and sometimes it's E/W resize)! Actually making kreeger's taking take.
Assignee: nobody → nick.kreeger
Status: ASSIGNED → NEW
In a perfect world, all these small icons' cursor would be fixed at once. Nick, can you see if it's easy when you look at this bug?
Attached patch Patch v1Splinter Review
Here is version 1 of the patch, it helps with updating the cursor 90% of the time. I think that the next step may be to make the autocomplete text field a little bit smarter about updating mouse events to child views inside it. We can give this a go for now.
Attachment #238314 - Flags: review?(stuart.morgan)
Comment on attachment 238314 [details] [diff] [review] Patch v1 >+ [self discardCursorRects]; Don't call this; it's called automatically before resetCursorRects. r=me with that change. I find it to only be really reliable if you mouse over the icon starting from the text area of the location bar, but that's the same behavior I see with the proxy icon. Is there a bug tracking that issue? If not, someone should file one.
Attachment #238314 - Flags: review?(stuart.morgan) → review+
Attached patch Patch v2Splinter Review
Attachment #238443 - Flags: superreview?(mikepinkerton)
Comment on attachment 238443 [details] [diff] [review] Patch v2 sr=pink seems like an odd way to fix it though. i guess the text view magically does the right thing for the area where there's text.
Attachment #238443 - Flags: superreview?(mikepinkerton) → superreview+
Checked into trunk and MOZILLA_1_8_BRANCH
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
(In reply to comment #7) > seems like an odd way to fix it though. i guess the text view magically does > the right thing for the area where there's text. Yeah, that's what I thought too until I looked at the applied patch in full context; the change is actually to the class that encapsulates the click-menu icons of the lock and rss indicator.
(In reply to comment #5) > r=me with that change. I find it to only be really reliable if you mouse over > the icon starting from the text area of the location bar, but that's the same > behavior I see with the proxy icon. Is there a bug tracking that issue? If > not, someone should file one. This is now bug 352764 :)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: