Fixing bug 352293, should show standard mouse cursor instead of text cursor when hovering over RSS/lock icon. <Camino only>. r=stuart.morgan, sr=pink